service/tests/requests/snapshots/orders/can_list_orders@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"data\":[{\"id\":410,\"pid\":\"PID\",\"orderNumber\":10,\"customerId\":11,\"billingAddressId\":302,\"shippingAddressId\":301,\"customerName\":\"John Doe\",\"customerEmail\":\"john.doe@silk.com\",\"customerImage\":\"https://randomuser.me/api/portraits/men/32.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@silk.com\",\"label\":\"Billing\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":\"Acme Trading\",\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":null,\"postalCode\":\"00100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@silk.com\",\"label\":\"Home\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":null,\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":\"Apartment 4B\",\"postalCode\":\"00100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"status\":\"processing\",\"paymentStatus\":\"paid\",\"fulfillmentStatus\":\"partial\",\"currency\":\"USD\",\"subtotal\":\"169.97\",\"discountTotal\":\"20.00\",\"shippingTotal\":\"0\",\"taxTotal\":\"13.50\",\"grandTotal\":\"163.47\",\"customerNote\":\"Send available items first.\",\"staffNote\":\"Two items packed; sneakers pending replenishment.\",\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":408,\"pid\":\"PID\",\"orderNumber\":8,\"customerId\":22,\"billingAddressId\":304,\"shippingAddressId\":303,\"customerName\":\"Jane Smith\",\"customerEmail\":\"jane.smith@globex.com\",\"customerImage\":\"https://randomuser.me/api/portraits/women/44.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Mombasa\",\"email\":\"jane.smith@globex.com\",\"label\":\"Office billing\",\"phone\":\"+254711000022\",\"region\":\"Mombasa County\",\"company\":\"Globex East Africa\",\"lineOne\":\"7 Nkrumah Road\",\"lineTwo\":\"Floor 3\",\"postalCode\":\"80100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"Jane Smith\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Mombasa\",\"email\":\"jane.smith@globex.com\",\"label\":\"Home\",\"phone\":\"+254711000022\",\"region\":\"Mombasa County\",\"company\":null,\"lineOne\":\"18 Nyali Road\",\"lineTwo\":\"House 6\",\"postalCode\":\"80100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"Jane Smith\"},\"status\":\"confirmed\",\"paymentStatus\":\"authorized\",\"fulfillmentStatus\":\"unfulfilled\",\"currency\":\"USD\",\"subtotal\":\"114.98\",\"discountTotal\":\"15.00\",\"shippingTotal\":\"5.00\",\"taxTotal\":\"9.00\",\"grandTotal\":\"113.98\",\"customerNote\":\"Deliver after 3 PM.\",\"staffNote\":\"Card authorized; stock allocated.\",\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":407,\"pid\":\"PID\",\"orderNumber\":7,\"customerId\":11,\"billingAddressId\":302,\"shippingAddressId\":301,\"customerName\":\"John Doe\",\"customerEmail\":\"john.doe@silk.com\",\"customerImage\":\"https://randomuser.me/api/portraits/men/32.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@silk.com\",\"label\":\"Billing\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":\"Acme Trading\",\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":null,\"postalCode\":\"00100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@silk.com\",\"label\":\"Home\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":null,\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":\"Apartment 4B\",\"postalCode\":\"00100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"status\":\"pending\",\"paymentStatus\":\"pending\",\"fulfillmentStatus\":\"unfulfilled\",\"currency\":\"USD\",\"subtotal\":\"109.98\",\"discountTotal\":\"0\",\"shippingTotal\":\"0\",\"taxTotal\":\"9.90\",\"grandTotal\":\"119.88\",\"customerNote\":null,\"staffNote\":\"Awaiting bank transfer confirmation.\",\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":402,\"pid\":\"PID\",\"orderNumber\":2,\"customerId\":11,\"billingAddressId\":302,\"shippingAddressId\":301,\"customerName\":\"John Doe\",\"customerEmail\":\"john.doe@acme.com\",\"customerImage\":\"https://randomuser.me/api/portraits/men/32.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@acme.com\",\"label\":\"Billing\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":\"Acme Trading\",\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":null,\"postalCode\":\"00100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@acme.com\",\"label\":\"Home\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":null,\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":\"Apartment 4B\",\"postalCode\":\"00100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"status\":\"completed\",\"paymentStatus\":\"paid\",\"fulfillmentStatus\":\"fulfilled\",\"currency\":\"USD\",\"subtotal\":\"89.99\",\"discountTotal\":\"10.00\",\"shippingTotal\":\"0\",\"taxTotal\":\"8.00\",\"grandTotal\":\"87.99\",\"customerNote\":null,\"staffNote\":\"Delivered by local courier.\",\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":\"DATE\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":401,\"pid\":\"PID\",\"orderNumber\":1,\"customerId\":11,\"billingAddressId\":302,\"shippingAddressId\":301,\"customerName\":\"John Doe\",\"customerEmail\":\"john.doe@acme.com\",\"customerImage\":\"https://randomuser.me/api/portraits/men/32.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@acme.com\",\"label\":\"Billing\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":\"Acme Trading\",\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":null,\"postalCode\":\"00100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@acme.com\",\"label\":\"Home\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":null,\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":\"Apartment 4B\",\"postalCode\":\"00100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"status\":\"confirmed\",\"paymentStatus\":\"paid\",\"fulfillmentStatus\":\"unfulfilled\",\"currency\":\"USD\",\"subtotal\":\"24.99\",\"discountTotal\":\"0\",\"shippingTotal\":\"5.00\",\"taxTotal\":\"4.50\",\"grandTotal\":\"34.49\",\"customerNote\":\"Please leave the parcel with reception.\",\"staffNote\":null,\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":405,\"pid\":\"PID\",\"orderNumber\":5,\"customerId\":22,\"billingAddressId\":304,\"shippingAddressId\":303,\"customerName\":\"Jane Smith\",\"customerEmail\":\"jane.smith@globex.com\",\"customerImage\":\"https://randomuser.me/api/portraits/women/44.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Mombasa\",\"email\":\"jane.smith@globex.com\",\"label\":\"Office billing\",\"phone\":\"+254711000022\",\"region\":\"Mombasa County\",\"company\":\"Globex East Africa\",\"lineOne\":\"7 Nkrumah Road\",\"lineTwo\":\"Floor 3\",\"postalCode\":\"80100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"Jane Smith\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Mombasa\",\"email\":\"jane.smith@globex.com\",\"label\":\"Home\",\"phone\":\"+254711000022\",\"region\":\"Mombasa County\",\"company\":null,\"lineOne\":\"18 Nyali Road\",\"lineTwo\":\"House 6\",\"postalCode\":\"80100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"Jane Smith\"},\"status\":\"cancelled\",\"paymentStatus\":\"failed\",\"fulfillmentStatus\":\"cancelled\",\"currency\":\"USD\",\"subtotal\":\"24.99\",\"discountTotal\":\"0\",\"shippingTotal\":\"5.00\",\"taxTotal\":\"0\",\"grandTotal\":\"29.99\",\"customerNote\":null,\"staffNote\":\"Payment failed twice; order cancelled automatically.\",\"placedAt\":\"DATE\",\"cancelledAt\":\"DATE\",\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":404,\"pid\":\"PID\",\"orderNumber\":4,\"customerId\":33,\"billingAddressId\":306,\"shippingAddressId\":305,\"customerName\":\"James Moriaty\",\"customerEmail\":\"james.moriaty@continental.org\",\"customerImage\":\"https://randomuser.me/api/portraits/men/46.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"London\",\"email\":\"accounts@continental.org\",\"label\":\"Organisation billing\",\"phone\":\"+442079460033\",\"region\":\"Greater London\",\"company\":\"Continental Organisation\",\"lineOne\":\"1 Canada Square\",\"lineTwo\":\"Level 24\",\"postalCode\":\"E14 5AB\",\"addressType\":\"billing\",\"countryCode\":\"GB\",\"recipientName\":\"James Moriaty\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"London\",\"email\":\"james.moriaty@continental.org\",\"label\":\"London flat\",\"phone\":\"+442079460033\",\"region\":\"Greater London\",\"company\":null,\"lineOne\":\"27 Baker Street\",\"lineTwo\":\"Flat 12\",\"postalCode\":\"W1U 8EQ\",\"addressType\":\"shipping\",\"countryCode\":\"GB\",\"recipientName\":\"James Moriaty\"},\"status\":\"processing\",\"paymentStatus\":\"paid\",\"fulfillmentStatus\":\"partial\",\"currency\":\"USD\",\"subtotal\":\"144.98\",\"discountTotal\":\"0\",\"shippingTotal\":\"0\",\"taxTotal\":\"13.05\",\"grandTotal\":\"158.03\",\"customerNote\":null,\"staffNote\":\"Trousers dispatched; sneakers awaiting collection.\",\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":403,\"pid\":\"PID\",\"orderNumber\":3,\"customerId\":22,\"billingAddressId\":304,\"shippingAddressId\":303,\"customerName\":\"Jane Smith\",\"customerEmail\":\"jane.smith@globex.com\",\"customerImage\":\"https://randomuser.me/api/portraits/women/44.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Mombasa\",\"email\":\"jane.smith@globex.com\",\"label\":\"Office billing\",\"phone\":\"+254711000022\",\"region\":\"Mombasa County\",\"company\":\"Globex East Africa\",\"lineOne\":\"7 Nkrumah Road\",\"lineTwo\":\"Floor 3\",\"postalCode\":\"80100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"Jane Smith\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Mombasa\",\"email\":\"jane.smith@globex.com\",\"label\":\"Home\",\"phone\":\"+254711000022\",\"region\":\"Mombasa County\",\"company\":null,\"lineOne\":\"18 Nyali Road\",\"lineTwo\":\"House 6\",\"postalCode\":\"80100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"Jane Smith\"},\"status\":\"pending\",\"paymentStatus\":\"pending\",\"fulfillmentStatus\":\"unfulfilled\",\"currency\":\"USD\",\"subtotal\":\"49.98\",\"discountTotal\":\"5.00\",\"shippingTotal\":\"5.99\",\"taxTotal\":\"4.50\",\"grandTotal\":\"55.47\",\"customerNote\":\"Call when the courier reaches the gate.\",\"staffNote\":null,\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":406,\"pid\":\"PID\",\"orderNumber\":6,\"customerId\":33,\"billingAddressId\":306,\"shippingAddressId\":305,\"customerName\":\"James Moriaty\",\"customerEmail\":\"james.moriaty@continental.org\",\"customerImage\":\"https://randomuser.me/api/portraits/men/46.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"London\",\"email\":\"accounts@continental.org\",\"label\":\"Organisation billing\",\"phone\":\"+442079460033\",\"region\":\"Greater London\",\"company\":\"Continental Organisation\",\"lineOne\":\"1 Canada Square\",\"lineTwo\":\"Level 24\",\"postalCode\":\"E14 5AB\",\"addressType\":\"billing\",\"countryCode\":\"GB\",\"recipientName\":\"James Moriaty\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"London\",\"email\":\"james.moriaty@continental.org\",\"label\":\"London flat\",\"phone\":\"+442079460033\",\"region\":\"Greater London\",\"company\":null,\"lineOne\":\"27 Baker Street\",\"lineTwo\":\"Flat 12\",\"postalCode\":\"W1U 8EQ\",\"addressType\":\"shipping\",\"countryCode\":\"GB\",\"recipientName\":\"James Moriaty\"},\"status\":\"refunded\",\"paymentStatus\":\"refunded\",\"fulfillmentStatus\":\"fulfilled\",\"currency\":\"USD\",\"subtotal\":\"89.99\",\"discountTotal\":\"10.00\",\"shippingTotal\":\"0\",\"taxTotal\":\"7.20\",\"grandTotal\":\"87.19\",\"customerNote\":\"The shoes are too narrow.\",\"staffNote\":\"Return inspected and refund approved.\",\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":\"DATE\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":409,\"pid\":\"PID\",\"orderNumber\":9,\"customerId\":33,\"billingAddressId\":306,\"shippingAddressId\":305,\"customerName\":\"James Moriaty\",\"customerEmail\":\"james.moriaty@continental.org\",\"customerImage\":\"https://randomuser.me/api/portraits/men/46.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"London\",\"email\":\"accounts@continental.org\",\"label\":\"Organisation billing\",\"phone\":\"+442079460033\",\"region\":\"Greater London\",\"company\":\"Continental Organisation\",\"lineOne\":\"1 Canada Square\",\"lineTwo\":\"Level 24\",\"postalCode\":\"E14 5AB\",\"addressType\":\"billing\",\"countryCode\":\"GB\",\"recipientName\":\"James Moriaty\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"London\",\"email\":\"james.moriaty@continental.org\",\"label\":\"London flat\",\"phone\":\"+442079460033\",\"region\":\"Greater London\",\"company\":null,\"lineOne\":\"27 Baker Street\",\"lineTwo\":\"Flat 12\",\"postalCode\":\"W1U 8EQ\",\"addressType\":\"shipping\",\"countryCode\":\"GB\",\"recipientName\":\"James Moriaty\"},\"status\":\"completed\",\"paymentStatus\":\"paid\",\"fulfillmentStatus\":\"fulfilled\",\"currency\":\"USD\",\"subtotal\":\"104.97\",\"discountTotal\":\"0\",\"shippingTotal\":\"0\",\"taxTotal\":\"9.45\",\"grandTotal\":\"114.42\",\"customerNote\":null,\"staffNote\":\"Delivered and signed for by the customer.\",\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":\"DATE\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}],\"pagination\":{\"page\":1,\"limit\":20,\"totalItems\":10,\"totalPages\":1,\"hasNext\":false,\"hasPrev\":false}}",
)
