service/tests/requests/snapshots/orders/can_list_orders_in_date_range@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"data\":[{\"id\":405,\"pid\":\"PID\",\"orderNumber\":5,\"customerId\":22,\"billingAddressId\":304,\"shippingAddressId\":303,\"customerName\":\"Jane Smith\",\"customerEmail\":\"jane.smith@globex.com\",\"customerImage\":\"https://randomuser.me/api/portraits/women/44.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Mombasa\",\"email\":\"jane.smith@globex.com\",\"label\":\"Office billing\",\"phone\":\"+254711000022\",\"region\":\"Mombasa County\",\"company\":\"Globex East Africa\",\"lineOne\":\"7 Nkrumah Road\",\"lineTwo\":\"Floor 3\",\"postalCode\":\"80100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"Jane Smith\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Mombasa\",\"email\":\"jane.smith@globex.com\",\"label\":\"Home\",\"phone\":\"+254711000022\",\"region\":\"Mombasa County\",\"company\":null,\"lineOne\":\"18 Nyali Road\",\"lineTwo\":\"House 6\",\"postalCode\":\"80100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"Jane Smith\"},\"status\":\"cancelled\",\"paymentStatus\":\"failed\",\"fulfillmentStatus\":\"cancelled\",\"currency\":\"USD\",\"subtotal\":\"24.99\",\"discountTotal\":\"0\",\"shippingTotal\":\"5.00\",\"taxTotal\":\"0\",\"grandTotal\":\"29.99\",\"customerNote\":null,\"staffNote\":\"Payment failed twice; order cancelled automatically.\",\"placedAt\":\"DATE\",\"cancelledAt\":\"DATE\",\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}],\"pagination\":{\"page\":1,\"limit\":20,\"totalItems\":1,\"totalPages\":1,\"hasNext\":false,\"hasPrev\":false}}",
)
