service/tests/requests/snapshots/orders/can_list_pending_payments@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"data\":[{\"id\":407,\"pid\":\"PID\",\"orderNumber\":7,\"customerId\":11,\"billingAddressId\":302,\"shippingAddressId\":301,\"customerName\":\"John Doe\",\"customerEmail\":\"john.doe@silk.com\",\"customerImage\":\"https://randomuser.me/api/portraits/men/32.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@silk.com\",\"label\":\"Billing\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":\"Acme Trading\",\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":null,\"postalCode\":\"00100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@silk.com\",\"label\":\"Home\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":null,\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":\"Apartment 4B\",\"postalCode\":\"00100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"status\":\"pending\",\"paymentStatus\":\"pending\",\"fulfillmentStatus\":\"unfulfilled\",\"currency\":\"USD\",\"subtotal\":\"109.98\",\"discountTotal\":\"0\",\"shippingTotal\":\"0\",\"taxTotal\":\"9.90\",\"grandTotal\":\"119.88\",\"customerNote\":null,\"staffNote\":\"Awaiting bank transfer confirmation.\",\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":403,\"pid\":\"PID\",\"orderNumber\":3,\"customerId\":22,\"billingAddressId\":304,\"shippingAddressId\":303,\"customerName\":\"Jane Smith\",\"customerEmail\":\"jane.smith@globex.com\",\"customerImage\":\"https://randomuser.me/api/portraits/women/44.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Mombasa\",\"email\":\"jane.smith@globex.com\",\"label\":\"Office billing\",\"phone\":\"+254711000022\",\"region\":\"Mombasa County\",\"company\":\"Globex East Africa\",\"lineOne\":\"7 Nkrumah Road\",\"lineTwo\":\"Floor 3\",\"postalCode\":\"80100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"Jane Smith\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Mombasa\",\"email\":\"jane.smith@globex.com\",\"label\":\"Home\",\"phone\":\"+254711000022\",\"region\":\"Mombasa County\",\"company\":null,\"lineOne\":\"18 Nyali Road\",\"lineTwo\":\"House 6\",\"postalCode\":\"80100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"Jane Smith\"},\"status\":\"pending\",\"paymentStatus\":\"pending\",\"fulfillmentStatus\":\"unfulfilled\",\"currency\":\"USD\",\"subtotal\":\"49.98\",\"discountTotal\":\"5.00\",\"shippingTotal\":\"5.99\",\"taxTotal\":\"4.50\",\"grandTotal\":\"55.47\",\"customerNote\":\"Call when the courier reaches the gate.\",\"staffNote\":null,\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}],\"pagination\":{\"page\":1,\"limit\":20,\"totalItems\":2,\"totalPages\":1,\"hasNext\":false,\"hasPrev\":false}}",
)
