service/tests/requests/snapshots/orders/can_list_unfulfilled_orders@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"data\":[{\"id\":401,\"pid\":\"PID\",\"orderNumber\":1,\"customerId\":11,\"billingAddressId\":302,\"shippingAddressId\":301,\"customerName\":\"John Doe\",\"customerEmail\":\"john.doe@acme.com\",\"customerImage\":\"https://randomuser.me/api/portraits/men/32.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@acme.com\",\"label\":\"Billing\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":\"Acme Trading\",\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":null,\"postalCode\":\"00100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@acme.com\",\"label\":\"Home\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":null,\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":\"Apartment 4B\",\"postalCode\":\"00100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"status\":\"confirmed\",\"paymentStatus\":\"paid\",\"fulfillmentStatus\":\"unfulfilled\",\"currency\":\"USD\",\"subtotal\":\"24.99\",\"discountTotal\":\"0\",\"shippingTotal\":\"5.00\",\"taxTotal\":\"4.50\",\"grandTotal\":\"34.49\",\"customerNote\":\"Please leave the parcel with reception.\",\"staffNote\":null,\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}],\"pagination\":{\"page\":1,\"limit\":20,\"totalItems\":1,\"totalPages\":1,\"hasNext\":false,\"hasPrev\":false}}",
)
