service/tests/requests/snapshots/orders/can_search_orders@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"data\":[{\"id\":410,\"pid\":\"PID\",\"orderNumber\":10,\"customerId\":11,\"billingAddressId\":302,\"shippingAddressId\":301,\"customerName\":\"John Doe\",\"customerEmail\":\"john.doe@silk.com\",\"customerImage\":\"https://randomuser.me/api/portraits/men/32.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@silk.com\",\"label\":\"Billing\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":\"Acme Trading\",\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":null,\"postalCode\":\"00100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@silk.com\",\"label\":\"Home\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":null,\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":\"Apartment 4B\",\"postalCode\":\"00100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"status\":\"processing\",\"paymentStatus\":\"paid\",\"fulfillmentStatus\":\"partial\",\"currency\":\"USD\",\"subtotal\":\"169.97\",\"discountTotal\":\"20.00\",\"shippingTotal\":\"0\",\"taxTotal\":\"13.50\",\"grandTotal\":\"163.47\",\"customerNote\":\"Send available items first.\",\"staffNote\":\"Two items packed; sneakers pending replenishment.\",\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":407,\"pid\":\"PID\",\"orderNumber\":7,\"customerId\":11,\"billingAddressId\":302,\"shippingAddressId\":301,\"customerName\":\"John Doe\",\"customerEmail\":\"john.doe@silk.com\",\"customerImage\":\"https://randomuser.me/api/portraits/men/32.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@silk.com\",\"label\":\"Billing\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":\"Acme Trading\",\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":null,\"postalCode\":\"00100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@silk.com\",\"label\":\"Home\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":null,\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":\"Apartment 4B\",\"postalCode\":\"00100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"status\":\"pending\",\"paymentStatus\":\"pending\",\"fulfillmentStatus\":\"unfulfilled\",\"currency\":\"USD\",\"subtotal\":\"109.98\",\"discountTotal\":\"0\",\"shippingTotal\":\"0\",\"taxTotal\":\"9.90\",\"grandTotal\":\"119.88\",\"customerNote\":null,\"staffNote\":\"Awaiting bank transfer confirmation.\",\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":402,\"pid\":\"PID\",\"orderNumber\":2,\"customerId\":11,\"billingAddressId\":302,\"shippingAddressId\":301,\"customerName\":\"John Doe\",\"customerEmail\":\"john.doe@acme.com\",\"customerImage\":\"https://randomuser.me/api/portraits/men/32.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@acme.com\",\"label\":\"Billing\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":\"Acme Trading\",\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":null,\"postalCode\":\"00100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@acme.com\",\"label\":\"Home\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":null,\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":\"Apartment 4B\",\"postalCode\":\"00100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"status\":\"completed\",\"paymentStatus\":\"paid\",\"fulfillmentStatus\":\"fulfilled\",\"currency\":\"USD\",\"subtotal\":\"89.99\",\"discountTotal\":\"10.00\",\"shippingTotal\":\"0\",\"taxTotal\":\"8.00\",\"grandTotal\":\"87.99\",\"customerNote\":null,\"staffNote\":\"Delivered by local courier.\",\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":\"DATE\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":401,\"pid\":\"PID\",\"orderNumber\":1,\"customerId\":11,\"billingAddressId\":302,\"shippingAddressId\":301,\"customerName\":\"John Doe\",\"customerEmail\":\"john.doe@acme.com\",\"customerImage\":\"https://randomuser.me/api/portraits/men/32.jpg\",\"billingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@acme.com\",\"label\":\"Billing\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":\"Acme Trading\",\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":null,\"postalCode\":\"00100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"shippingAddressSnapshot\":{\"pid\":\"PID\",\"city\":\"Nairobi\",\"email\":\"john.doe@acme.com\",\"label\":\"Home\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":null,\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":\"Apartment 4B\",\"postalCode\":\"00100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"status\":\"confirmed\",\"paymentStatus\":\"paid\",\"fulfillmentStatus\":\"unfulfilled\",\"currency\":\"USD\",\"subtotal\":\"24.99\",\"discountTotal\":\"0\",\"shippingTotal\":\"5.00\",\"taxTotal\":\"4.50\",\"grandTotal\":\"34.49\",\"customerNote\":\"Please leave the parcel with reception.\",\"staffNote\":null,\"placedAt\":\"DATE\",\"cancelledAt\":null,\"completedAt\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}],\"pagination\":{\"page\":1,\"limit\":20,\"totalItems\":4,\"totalPages\":1,\"hasNext\":false,\"hasPrev\":false}}",
)
