service/tests/requests/snapshots/orders/cannot_fetch_order_when_pid_does_not_exist@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    404,
    "{\"error\":\"Entity not found\",\"code\":\"entity_not_found\"}",
)
