service/tests/requests/snapshots/orders/cannot_fetch_order_when_pid_is_invalid@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"Invalid URL: Cannot parse `pid` with value `not-a-uuid`: UUID parsing failed: invalid character: found `n` at 0\"}",
)
