service/tests/requests/snapshots/orders/cannot_list_orders_with_invalid_limit@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"{\\\"limit\\\":\\\"Limit must be a positive integer\\\"}\"}",
)
