service/tests/requests/snapshots/orders/checkout_reports_unconfigured_stripe@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    503,
    "{\"error\":\"Payments are temporarily unavailable. Please try again later.\",\"code\":\"stripe_not_configured\"}",
)
