service/tests/requests/snapshots/orders/checkout_requires_a_shipping_address@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    422,
    "{\"error\":\"Failed to deserialize the JSON body into the target type: missing field `shippingAddressPid` at line 1 column 78\",\"code\":\"invalid_json\"}",
)
